jenkins/jenkins-master/kubernetes/jenkins-ing.yaml
# Create the ingress resource
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ui
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/server-snippet: |
    #   proxy_ssl_verify off;
spec:
  rules:
  - host: jenkins.apps.kubernetes.shaker242.lab
    http:
      paths:
      - backend:
          serviceName: jenkins-master
          servicePort: 80
  tls: # array
    # tls/hosts,secretName
  - hosts: 
    - jenkins.apps.kubernetes.shaker242.lab
    secretName: jenkins-secret
