jenkins/jenkins-master/kubernetes/jenkins-svc.yaml
kind: Service
apiVersion: v1
metadata:
    name: jenkins-master
    namespace: jenkins
spec:
    selector:
        app: jenkins-master
    ports:
        - port: 50000
          protocol: TCP
          targetPort: 50000
          name: slaves
        - port: 80
          protocol: TCP
          targetPort: 8080
          name: ui

# ---
# Create the ingress resource
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ui
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/server-snippet: |
    #   proxy_ssl_verify off;
spec:
  rules:
  - host: jenkins.apps.shaker242.lab
    http:
      paths:
      - backend:
          serviceName: jenkins-master
          servicePort: 80
  tls: # array
    # tls/hosts,secretName
  - hosts: 
    - jenkins.apps.shaker242.lab
    secretName: jenkins-secret
